@startuml

class Ladron {
    - nombre: String
    + Ladron(nombre, descripcion)
    + descripcion(): DescripcionSospechoso
    + getNombre(): String
    + seLlama(nombre): boolean
}

class DescripcionSospechoso {
    + DescripcionSospechoso(rasgos)
    + coincideCon(descripcion): boolean
    + agregar(rasgos)
    + agregar(descripcion)
    + getPistaVehiculo(): String
    + getPistaHobby(): String
    + getPistaOcupacion(): String
    + getPistaColorDePelo(): String
    + getPistaSenias(): String
}

class Rasgo {
    - categoria: String
    - valor: String
    + Rasgo(categoria, valor)
    + categoria(): String
    + igualA(rasgo): boolean
    + toString(): String
}

Ladron "1" o-- "1" DescripcionSospechoso
DescripcionSospechoso "1" o-- "*" Rasgo

@enduml
